--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 img {
     display: block;
 }
@@ -46,10 +57,11 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;
     text-decoration: none;
     padding: 24px 0;
     display: inline-block;
+    position: relative;
+    color: #404bbf;
 }
 
 .nav-item:hover {
@@ -71,6 +83,7 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .general-contact:hover {
@@ -84,6 +97,11 @@ body {
 .first-section {
     background-color: #2e2f42;
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/hero_image.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .main-headline {
@@ -116,6 +134,7 @@ body {
     margin: 0;
     margin-left: auto;
     margin-right: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-order-service:hover {
@@ -321,6 +340,7 @@ body {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -476,4 +496,14 @@ body {
 
 .second-section-item {
     flex-basis: calc((100% - 72px) / 4);
+}
+
+.div-second-section-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
 }
