--- a/css/styles.css
+++ b/css/styles.css
@@ -542,3 +542,50 @@ body {
 .icon-link {
     fill:  #f4f4fd;
 }
+
+.fifth-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.headline-fifth-section {
+    font-size: 36px;
+    line-height: 1.11;
+    color: #2e2f42;
+    margin-bottom: 72px;
+}
+
+.list-of-customers {
+    display: flex;
+    gap: 24px;
+}
+
+.customers-item {
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+}
+
+.customers-link {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #8e8f99;
+}
+
+.customers-link:hover {
+    border-color: #404bbf;
+    color: #404bbf;
+}
+
+.customers-link:focus {
+    border-color: #404bbf;
+    color: #404bbf;
+}
+
+.customers-svg {
+    fill: currentColor;
+}
