--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,7 @@ body {
 .social-networks-item {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-network-link {
@@ -588,4 +589,14 @@ body {
 
 .customers-svg {
     fill: currentColor;
+}
+
+.div-for-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
 }
