--- a/css/styles.css
+++ b/css/styles.css
@@ -564,6 +564,7 @@ body {
 .customers-item {
     width: calc((100% - 120px) / 6);
     height: 88px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .customers-link {
@@ -599,4 +600,120 @@ body {
     background-color: #f4f4fd;
     border-radius: 4px;
     margin-bottom: 8px;
+}
+
+.svg-customers {
+    fill: currentColor;
+}
+
+.footer-main {
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
+}
+
+.social-media-footer {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--white);
+    margin-bottom: 16px;
+
+}
+
+.social-media-list-footer {
+    display: flex;
+    gap: 16px;
+}
+
+.social-media-link-footer {
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-media-link-footer:hover {
+    background-color: #31d0aa;
+}
+
+.social-media-link-footer:focus {
+    background-color: #31d0aa;
+}
+
+.svg-footer {
+    fill: var(--gray);
+}
+
+/* -----/* Модальне вікно-----/* */
+
+.js-structure {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.modal-window {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close:hover {
+    background-color: #404bbf;
+    border: none;
+}
+
+.button-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.svg-modal-window {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.svg-modal-window:hover {
+    fill: #ffffff;
+}
+
+.svg-modal-window:focus {
+    fill: #ffffff;
 }
