--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,7 @@ body {
 }
 
 .advantages-item {
+    display: block;
     flex-basis: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -731,10 +732,6 @@ body {
     fill: #ffffff;
 }
 
-.advantages-list {
-    display: block;
-}
-
 .advantages-list:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -754,11 +751,61 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--pretty)
+    color: var(--pretty);
     padding: 40px 32px;
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-container-for-logo-and-paragraph {
+    margin-right: 120px;
+}
+
+.social-media-portfolio {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--white);
+    margin-bottom: 16px;
+}
+
+.ul-footer {
+    display: flex;
+    gap: 16px;
+}
+
+.social-media-item-portfolio {
+    width: 40px;
+    height: 40px;
+}
+
+.social-media-link {
+    height: 100%;
+    width: 100%;
+    color: var(--blue);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-media-link:hover {
+    background-color: #31d0aa;
+}
+
+.social-media-link:focus {
+    background-color: #31d0aa;
+}
+
+.svg-footer-portfolio {
+    fill: var(--pretty)
 }
