--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Для початку */
+
 ::after {
     content: '';
     position: absolute;
@@ -24,6 +26,10 @@ body {
     color: #434455;
     background-color: var(--white);
 }
+
+/* Для початку */
+
+
 
 .logo-header {
     font-family: "Raleway", sans-serif;
@@ -524,40 +530,6 @@ body {
     margin-bottom: 8px;
 }
 
-.social-networks {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-}
-
-.social-networks-item {
-    width: 40px;
-    height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-network-link {
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.social-network-link:hover {
-    background-color: #404bbf;
-}
-
-.social-network-link:focus {
-    background-color: #404bbf;
-}
-
-.icon-link {
-    fill:  #f4f4fd;
-}
-
 .fifth-section {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -734,6 +706,10 @@ body {
     fill: #ffffff;
 }
 
+/* -----/* Модальне вікно-----/* */
+
+
+
 .advantages-list:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -811,3 +787,41 @@ body {
 .svg-footer-portfolio {
     fill: var(--pretty)
 }
+
+/* Основна сторінка Social Media 4 секція */
+
+.social-media-of-person-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.social-media-of-person-item {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-media-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex   ;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-media-link:hover {
+    background-color: #404bbf;
+}
+
+.social-media-link:focus {
+    background-color: #404bbf;
+}
+
+.icon-link {
+    fill:  #f4f4fd;
+}
+
+/* Основна сторінка Social Media 4 секція */
