--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Для початку */
 
-::after {
+.current::after {
     content: '';
     position: absolute;
     left: 0;
@@ -40,8 +40,8 @@ body {
     text-transform: uppercase;
     color: var(--blue);
     text-decoration: none;
-    margin-right: 76px;
     display: inline-block;
+    margin-right: 72px;
 }
 
 .studio-word-decorate {
@@ -68,7 +68,7 @@ body {
     padding: 24px 0;
     display: inline-block;
     position: relative;
-    color: #404bbf;
+    color: var(--gray);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -105,7 +105,7 @@ body {
 .first-section {
     background-color: #2e2f42;
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/hero_image.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero_image.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
@@ -540,6 +540,7 @@ body {
     line-height: 1.11;
     color: #2e2f42;
     margin-bottom: 72px;
+    text-align: center;
 }
 
 .list-of-customers {
@@ -590,51 +591,6 @@ body {
 
 .svg-customers {
     fill: currentColor;
-}
-
-.footer-main {
-    display: flex;
-    align-items: baseline;
-}
-
-.social-media-footer {
-    margin-bottom: 16px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--white);
-}
-
-.footer-main-for-link-and-paragraph {
-    margin-right: 120px;
-}
-
-.social-media-list-footer {
-    display: flex;
-    gap: 16px;
-}
-
-.social-media-link-footer {
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.social-media-link-footer:hover {
-    background-color: #31d0aa;
-}
-
-.social-media-link-footer:focus {
-    background-color: #31d0aa;
-}
-
-.svg-footer {
-    fill: var(--gray);
 }
 
 /* -----/* Модальне вікно-----/* */
@@ -825,3 +781,56 @@ body {
 }
 
 /* Основна сторінка Social Media 4 секція */
+
+/* Футер мейна та портфоліо */
+
+.footer-main-for-link-and-paragraph {
+    margin-right: 120px;
+}
+
+.social-media-footer {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--white);
+    margin-bottom: 16px;
+}
+
+.footer-main {
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-main-for-link-and-paragraph {
+    margin-right: 120px;
+}
+
+.social-media-list-footer {
+    display: flex;
+    gap: 16px;
+}
+
+.social-media-link-footer {
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-media-link-footer:hover {
+    background-color: #31d0aa;
+}
+
+.social-media-link-footer:focus {
+    background-color: #31d0aa;
+}
+
+.svg-footer {
+    fill: var(--gray);
+}
+
+/* Футер мейна та портфоліо */
