--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ body {
     padding: 24px 0;
     display: inline-block;
     position: relative;
-    color: var(--gray);
+    color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
