--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,15 @@
 img {
     display: block;
 }
+
+h1, h2, h3 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+
 :root {
     --white: #FFFFFF;
     --blue: #4d5ae5;
@@ -195,6 +204,7 @@ body {
     letter-spacing: 0.02em;
     font-size: 16px;
     text-align: center;
+    margin-bottom: 8px;
 }
 
 .third-section {
@@ -523,7 +533,6 @@ body {
     text-transform: uppercase;
     color: var(--blue);
     text-decoration: none;
-    margin-right: 76px;
     display: inline-block;
     margin-bottom: 16px;
 }
@@ -563,7 +572,6 @@ body {
 .customers-item {
     width: calc((100% - 120px) / 6);
     height: 88px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .customers-link {
@@ -575,6 +583,7 @@ body {
     align-items: center;
     justify-content: center;
     color: #8e8f99;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover {
@@ -721,16 +730,6 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media-link {
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex   ;
-    justify-content: center;
-    align-items: center;
-}
-
 .social-media-link:hover {
     background-color: #404bbf;
 }
@@ -785,11 +784,11 @@ body {
 }
 
 .social-media-link-footer:hover {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 
 .social-media-link-footer:focus {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 
 .svg-footer {
@@ -837,14 +836,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.social-media-link:hover {
-    background-color: #31d0aa;
-}
-
-.social-media-link:focus {
-    background-color: #31d0aa;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-footer-portfolio {
