--- a/css/styles.css
+++ b/css/styles.css
@@ -156,10 +156,12 @@ body {
 
 .button-order-service:hover {
     background-color: #404BBF;
+    fill: #ffffff;
 }
 
 .button-order-service:focus {
     background-color: #404BBF;
+    fill: #ffffff;
 }
 
 .third-section-headline,
@@ -491,11 +493,11 @@ body {
     display: block;
 }
 
-.advantages-link:hover {
+.advantages-item:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.advantages-link:focus {
+.advantages-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
@@ -791,16 +793,7 @@ body {
     background-color: #404bbf;
 }
 
-.svg-footer {
-    fill: rgb(0, 0, 0)
-}
-
-.social-media-item-footer {
-    width: 40px;
-    height: 40px;
-}
-
-.social-media-portfolio {
+.social-media {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -823,7 +816,7 @@ body {
     gap: 16px;
 }
 
-.social-media-item-portfolio {
+.social-media-item {
     width: 40px;
     height: 40px;
 }
@@ -831,15 +824,24 @@ body {
 .social-media-link {
     height: 100%;
     width: 100%;
-    color: var(--blue);
+    background-color: var(--blue    );
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.svg-footer-portfolio {
+.social-media-link:hover {
+    background-color: #31d0aa;
+}
+
+.social-media-link:focus {
+    background-color: #31d0aa;
+}
+
+
+
+.svg-footer {
     fill: var(--pretty)
 }
 /* Футер мейна та портфоліо */
