--- a/css/styles.css
+++ b/css/styles.css
@@ -156,12 +156,10 @@ body {
 
 .button-order-service:hover {
     background-color: #404BBF;
-    fill: #ffffff;
 }
 
 .button-order-service:focus {
     background-color: #404BBF;
-    fill: #ffffff;
 }
 
 .third-section-headline,
@@ -491,20 +489,28 @@ body {
 
 .advantages-link {
     display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.advantages-item:hover {
+.advantages-link:hover {
+    transform: translateY(0%);
+}
+
+.advantages-link:focus {
+    transform: translateY(0%);
+}
+
+.advantages-link:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.advantages-item:focus {
+.advantages-link:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .advantages-item {
     display: block;
     flex-basis: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .applications {
@@ -666,11 +672,13 @@ body {
 .button-close:hover {
     background-color: #404bbf;
     border: none;
+    fill: #ffffff;
 }
 
 .button-close:focus {
     background-color: #404bbf;
     border: none;
+    fill: #ffffff;
 }
 
 .svg-modal-window {
@@ -785,14 +793,6 @@ body {
     justify-content: center;
 }
 
-.social-media-link-footer:hover {
-    background-color: #404bbf;
-}
-
-.social-media-link-footer:focus {
-    background-color: #404bbf;
-}
-
 .social-media {
     font-weight: 500;
     font-size: 16px;
@@ -819,6 +819,7 @@ body {
 .social-media-item {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link {
@@ -829,16 +830,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link:hover {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 
 .social-media-link:focus {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
-
 
 
 .svg-footer {
