--- a/css/styles.css
+++ b/css/styles.css
@@ -493,14 +493,6 @@ body {
 }
 
 .advantages-link:hover {
-    transform: translateY(0%);
-}
-
-.advantages-link:focus {
-    transform: translateY(0%);
-}
-
-.advantages-link:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
@@ -725,6 +717,10 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.fixed-paragraph-portfolio:hover
+.fixed-paragraph-portfolio:focus {
+    transform: translateY(0%);
+}
 
 /* Основна сторінка Social Media 4 секція */
 
@@ -741,11 +737,11 @@ body {
 }
 
 .social-media-link:hover {
-    background-color: #404bbf;
+    background-color:  #31d0aa;
 }
 
 .social-media-link:focus {
-    background-color: #404bbf;
+    background-color:  #31d0aa;
 }
 
 .icon-link {
@@ -758,15 +754,6 @@ body {
 
 .footer-main-for-link-and-paragraph {
     margin-right: 120px;
-}
-
-.social-media-footer {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--white);
-    margin-bottom: 16px;
 }
 
 .footer-main {
@@ -834,11 +821,11 @@ body {
 }
 
 .social-media-link:hover {
-    background-color: #404bbf;
+    background-color: #31d0aa;
 }
 
 .social-media-link:focus {
-    background-color: #404bbf;
+    background-color: #31d0aa;
 }
 
 
