--- a/css/styles.css
+++ b/css/styles.css
@@ -717,8 +717,11 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.fixed-paragraph-portfolio:hover
-.fixed-paragraph-portfolio:focus {
+.advantages-link:hover .fixed-paragraph-portfolio:hover {
+    transform: translateY(0%);
+}
+
+.advantages-link:focus .fixed-paragraph-portfolio:focus {
     transform: translateY(0%);
 }
 
@@ -737,11 +740,11 @@ body {
 }
 
 .social-media-link:hover {
-    background-color:  #31d0aa;
+    background-color:  #404bbf;
 }
 
 .social-media-link:focus {
-    background-color:  #31d0aa;
+    background-color:  #404bbf;
 }
 
 .icon-link {
