--- a/css/styles.css
+++ b/css/styles.css
@@ -717,13 +717,13 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.advantages-link:hover .fixed-paragraph-portfolio:hover {
+.advantages-link:hover,
+.fixed-paragraph-portfolio:hover,
+.advantages-link:focus,
+.fixed-paragraph-portfolio:focus {
     transform: translateY(0%);
 }
 
-.advantages-link:focus .fixed-paragraph-portfolio:focus {
-    transform: translateY(0%);
-}
 
 /* Основна сторінка Social Media 4 секція */
 
@@ -737,14 +737,6 @@ body {
     width: 40px;
     height: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-media-link:hover {
-    background-color:  #404bbf;
-}
-
-.social-media-link:focus {
-    background-color:  #404bbf;
 }
 
 .icon-link {
@@ -773,15 +765,7 @@ body {
     gap: 16px;
 }
 
-.social-media-link-footer {
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 
 .social-media {
     font-weight: 500;
@@ -815,7 +799,7 @@ body {
 .social-media-link {
     height: 100%;
     width: 100%;
-    background-color: var(--blue    );
+    background-color: var(--blue);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -824,13 +808,12 @@ body {
 }
 
 .social-media-link:hover {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 
 .social-media-link:focus {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
-
 
 .svg-footer {
     fill: var(--pretty)
