--- a/css/styles.css
+++ b/css/styles.css
@@ -721,7 +721,7 @@ body {
     transform: translateY(0%);
 }
 
-.advantages-link:hover .paragraph-in-container-for-photo {
+.advantages-link:focus .paragraph-in-container-for-photo {
     transform: translateY(0%);
 }
 
@@ -815,6 +815,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link-forth-section:hover {
